# gitclaude

./: Cargo.toml  DESIGN.md  README.md
examples/: config.toml  repo-config.toml
src/: main.rs
src/claude/: bridge.rs  mod.rs
src/cli/: config.rs  disable.rs  enable.rs  init.rs  logs.rs  mod.rs  run.rs  status.rs  templates.rs
src/config/: loader.rs  mod.rs  types.rs
src/context/: builder.rs  diff.rs  mod.rs  monorepo.rs
src/hooks/: manager.rs  mod.rs  scripts.rs
src/output/: file.rs  mod.rs  notify.rs  terminal.rs
src/rate_limit/: mod.rs  strategies.rs
src/templates/: engine.rs  mod.rs
templates/: changelog.md  review.md  summary.md  validate.md
